--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,26 @@
-version: '3.8'
+version: "3.4"
 
 services:
   frontend:
     container_name: erp_frontend
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./
+      dockerfile: ./dockerfile
     volumes:
-      - ./src:/home/node/app/src
-      - ./public:/home/node/app/public
-      - ./package.json:/home/node/app/package.json
-      - ./package-lock.json:/home/node/app/package-lock.json
-      - ./tsconfig.json:/home/node/app/tsconfig.json
-      - ./tailwind.config.js:/home/node/app/tailwind.config.js
-      - ./postcss.config.js:/home/node/app/postcss.config.js
-      - ./next.config.ts:/home/node/app/next.config.ts
-      - ./eslint.config.mjs:/home/node/app/eslint.config.mjs
-      - ./next-env.d.ts:/home/node/app/next-env.d.ts
-      - ./.env:/home/node/app/.env
-      - ./.env.local:/home/node/app/.env.local
-    environment:
-      - NODE_ENV=development
-      - CHOKIDAR_USEPOLLING=true
-      - WATCHPACK_POLLING=true
-    command: sh -c "npm install && npm run dev"
+      - ./:/home/node/app
+    command: npm run dev
+
+  router:
+    container_name: erp_router
+    image: traefik:v2.4.9
+    links:
+      - frontend
     ports:
-      - "3000:3000"
-      - "5555:5555" # for debugging if needed
-    stdin_open: true
-    tty: true
+      - 80:80
+      - 443:443
+    volumes:
+      - ./traefik/rules:/rules
+      - ./traefik/accesslog.txt:/accesslog.txt
+      - ./traefik/acme.json:/acme.json
+    env_file:
+      - .env
