--- a/package.json
+++ b/package.json
@@ -32,18 +32,23 @@
     "flat": "^6.0.1",
     "formik": "^2.4.9",
     "gsap": "^3.13.0",
+    "history": "^5.3.0",
     "html5-qrcode": "^2.3.8",
     "iconsax-react": "^0.0.8",
+    "jsbarcode": "^3.12.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.555.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "next": "16.0.6",
+    "query-string": "^9.3.1",
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
     "recharts": "^3.5.1",
+    "sass": "^1.94.2",
     "tailwind-merge": "^3.4.0",
     "yup": "^1.7.1"
   },
