--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "19.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
     "recharts": "^3.5.1",
