--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lucide-react": "^0.555.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.6.0",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "query-string": "^9.3.1",
     "react": "19.2.0",
     "react-countup": "^6.5.3",
