--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.6.0",
+    "react-router-dom": "^7.11.0",
     "recharts": "^3.5.1",
     "sass": "^1.94.2",
     "tailwind-merge": "^3.4.0",
